<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginHorizontal="8dp"
    android:layout_marginTop="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textSize="24sp"
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <View
        android:background="@color/gray_80"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <EditText
        android:id="@+id/crime_title_edt"
        android:textSize="22sp"
        android:hint="@string/enter_a_title_for_crime"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="" />
    <TextView
        android:textSize="24sp"
        android:text="@string/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <View
        android:background="@color/gray_80"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <Button
        android:text="@string/app_name"
        android:id="@+id/date_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/solved_cb"
        android:text="@string/solved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>